# tuigreety

./: .rustfmt.toml  CHANGELOG.md  COPYRIGHT  Cargo.toml  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/scripts/: package-release.sh
.github/workflows/: aur-git.yml  aur.yml  ci.yml  release.yml
contrib/: text.conf  tuigreet.toml
contrib/locales/pl-PL/: tuigreet.ftl
contrib/man/: tuigreet-1.scd
contrib/release/: INSTALL.md
packaging/aur/: tuigreet.conf
packaging/aur/greetd-tuigreety/: PKGBUILD
packaging/aur/greetd-tuigreety-bin/: PKGBUILD
packaging/aur/greetd-tuigreety-git/: PKGBUILD
packaging/aur/tuigreety/: PKGBUILD
packaging/aur/tuigreety-bin/: PKGBUILD
packaging/aur/tuigreety-git/: PKGBUILD
src/: cache.rs  config.rs  desktop_entry.rs  event.rs  greeter.rs  info.rs  ipc.rs  ipc_codec.rs  keyboard.rs  main.rs  power.rs  reload.rs  text.rs  watcher.rs
src/integration/: auth.rs  display.rs  exit.rs  menus.rs
src/integration/common/: backend.rs  mod.rs
src/ui/: command.rs  i18n.rs  input.rs  mod.rs  power.rs  processing.rs  prompt.rs  sessions.rs  util.rs
src/ui/common/: menu.rs
tests/: process.rs
