[package]
name         = "tuigreety"
version      = "0.10.3"
description  = "A console greeter for greetd"
license      = "GPL-3.0-or-later"
repository   = "https://github.com/Tobiichi-Origuchi/tuigreety"
readme       = "README.md"
edition      = "2024"
rust-version = "1.88"
build        = "build.rs"

[[bin]]
name = "tuigreet"
path = "src/main.rs"

[dependencies]
ansi-to-tui = { version = "8.0.1", default-features = false }
chrono = { version = "0.4.45", default-features = false, features = [ "clock", "std" ] }
crossterm = { version = "0.29.0", default-features = false, features = [ "event-stream" ] }
freedesktop-desktop-entry = { version = "0.8.1", default-features = false }
futures-util = { version = "0.3.32", default-features = false, features = [ "async-await", "std" ] }
getopts = "0.2.24"
greetd_ipc = { version = "0.10.3", features = [ "tokio-codec" ] }
nix = { version = "0.31.3", features = [ "dir", "feature", "ioctl" ] }
ratatui = { version = "0.30.2", default-features = false, features = [
  "crossterm_0_29",
  "layout-cache",
  "unstable-rendered-line-info",
] }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "net",
  "sync",
  "time",
  "process",
  "signal",
] }
toml_edit = { version = "0.25.12", default-features = false, features = [ "parse" ] }
tracing = { version = "0.1.44", default-features = false, features = [ "std" ] }
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", default-features = false, features = [ "fmt", "std" ] }
unicode-segmentation = "1.13.3"
unicode-width = "0.2.2"
utmp-rs = "0.4.0"
uzers = { version = "0.12.2", default-features = false }
zeroize = "1.9.0"

[profile.release]
lto   = true
strip = "symbols"

[dev-dependencies]
greetd-stub = "0.3.0"
tempfile    = "3.27.0"
